# ezjs

./: Cargo.toml  LICENSE  README.md
src/: ast.rs  builtin.rs  builtin_script.rs  bytecode.rs  common.rs  compile.rs  execute.rs  lib.rs  runtime.rs  token.rs  value.rs
tests/: Makefile  test_builtin.js  test_closure.js  test_debug.js  test_hook.js  test_language.js  test_loop.js  test_typescript.ts
